plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.4'
    id 'io.spring.dependency-management' version '1.1.7'
}
//
group = 'co.edu.uniquindio'
version = '0.0.1-SNAPSHOT'
description = 'Spring Boot project for hosting management'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // MapStruct
    implementation 'org.mapstruct:mapstruct:1.6.3'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'

    // Emails
    implementation 'org.simplejavamail:simple-java-mail:8.12.6'
    implementation 'org.simplejavamail:batch-module:8.12.6'
    implementation 'org.springframework.boot:spring-boot-starter-mail'

    // Driver de base de datos - MariaDB (LOCAL)
    runtimeOnly 'org.mariadb.jdbc:mariadb-java-client:3.5.2'
    runtimeOnly 'org.postgresql:postgresql:42.7.8'
    // Cloudinary
    implementation 'com.cloudinary:cloudinary-http5:2.3.2'

    // Seguridad y JWT
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'io.jsonwebtoken:jjwt-api:0.13.0'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.13.0'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.13.0'

    // WebSockets
    implementation 'org.springframework.boot:spring-boot-starter-websocket'

    // Utilidades
    implementation 'org.apache.commons:commons-text:1.10.0'

    // Testing
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.mockito:mockito-core:5.11.0'
    testImplementation 'org.mockito:mockito-junit-jupiter:5.11.0'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
    useJUnitPlatform()
    // Si te vuelve a salir el warning del agente de Mockito, puedes descomentar esto:
    // jvmArgs += ["-XX:+EnableDynamicAgentLoading"]
}